# mini_json

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/hello_mjson/: CMakeLists.txt
apps/hello_mjson/src/: hello_mjson.cpp
cmake/: Catch2.cmake
include/mjson/: mjson.hpp
src/: mjson.cpp
test/: CMakeLists.txt
test/mjson_test/: CMakeLists.txt  test.runsettings
test/mjson_test/src/: mjson_test.cpp
